[gd_scene load_steps=5 format=3 uid="uid://dpaj2n7qy0ywl"]

[ext_resource type="Script" path="res://[03] Scripts/npc/Npc.gd" id="1_e6f5b"]
[ext_resource type="PackedScene" uid="uid://b23rb8atokdu7" path="res://[01] Assets/Blender/female-base.blend" id="2_epg6w"]
[ext_resource type="PackedScene" uid="uid://cj88dokxkfi60" path="res://[02] Scenes/Objects/Interactable.tscn" id="3_q2e20"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xv7if"]
size = Vector3(1.6123, 2.70313, 0.858826)

[node name="FemaleNpc" type="Node3D"]
script = ExtResource("1_e6f5b")

[node name="female-base" parent="." instance=ExtResource("2_epg6w")]

[node name="FOCUS" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.35666, -0.377927)
visible = false
text = "FOCUS"

[node name="INTERACTED" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.35666, -0.377927)
visible = false
text = "INTERACTED"

[node name="UNFOCUSED" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.35666, -0.377927)
visible = false
text = "UNFOCUSED"

[node name="Interactable" parent="." instance=ExtResource("3_q2e20")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0291127, 0.851563, -0.0946042)
shape = SubResource("BoxShape3D_xv7if")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
